namespace FizzBuzz.Engine
{
    /// <summary>
    /// A rule that outputs text when a number is divisible by a specific divisor
    /// Using record for value-based equality (functional programming)
    /// </summary>
    public record DivisibilityRule(int Divisor, string Output) : RuleBase
    {
        public override RuleResult Evaluate(int number) => 
            number % Divisor == 0 
                ? RuleResult.ContinueWith(Output) 
                : RuleResult.Empty;
    }
}
